Storefront alignment fix for categories and other minor adjustments

--- a/public_html/storefront/view/default_html5/stylesheet/style.css
+++ b/public_html/storefront/view/default_html5/stylesheet/style.css
@@ -75,10 +75,6 @@ form {
 	margin: 0;
 }
 
-.textright {
-	text-align: right
-}
-
 .mt0 {
 	margin-top: 0 !important
 }
@@ -3207,14 +3203,6 @@ a.clostalert {
 
 	.footerlinks {
 		padding: 10px 0
-	}
-
-	.copyrightbottom {
-		text-align: center
-	}
-
-	.copyrightbottom .textright {
-		text-align: center
 	}
 
 	.otherddetails .otherddetailspart {
